[gd_scene load_steps=12 format=3 uid="uid://dsn5l2kp7qlq1"]

[ext_resource type="Script" path="res://Scripts/Crazoonga.gd" id="1_na1ic"]
[ext_resource type="PackedScene" uid="uid://bvlapjbiycgfw" path="res://Models/Crazoonga.glb" id="2_gncbb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s1ero"]
albedo_color = Color(0.902546, 0.312912, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_e4582"]
material = SubResource("StandardMaterial3D_s1ero")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_y3ju6"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxShape3D" id="BoxShape3D_63xir"]
size = Vector3(3.30963, 1, 7.94377)

[sub_resource type="BoxShape3D" id="BoxShape3D_cqx6n"]
size = Vector3(4.94407, 1, 6.24687)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i51v7"]
transparency = 1
albedo_color = Color(0.607843, 0.101961, 0.0862745, 0.541176)

[sub_resource type="BoxMesh" id="BoxMesh_u12sy"]
material = SubResource("StandardMaterial3D_i51v7")

[sub_resource type="Animation" id="Animation_xidhu"]
resource_name = "Swing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TestingBlock:transparency")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1001, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.1, 0.1, 0.1), Vector3(1.05, 1.05, 1.05), Vector3(0.1, 0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cbt8q"]
_data = {
"Swing": SubResource("Animation_xidhu")
}

[node name="Crazoonga" type="CharacterBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_na1ic")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0.5, 0)
visible = false
mesh = SubResource("CapsuleMesh_e4582")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0.5, 0)
visible = false
shape = SubResource("ConvexPolygonShape3D_y3ju6")

[node name="Crazoonga" parent="." instance=ExtResource("2_gncbb")]

[node name="CrazoongaArea3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CrazoongaArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.343051, 0.355606, 2.99904e-08)
shape = SubResource("BoxShape3D_63xir")

[node name="ClawSwing" type="Area3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="SwingTrigger" type="CollisionShape3D" parent="ClawSwing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.30171, 0, 1.72088)
shape = SubResource("BoxShape3D_cqx6n")

[node name="SwingTimer" type="Timer" parent="ClawSwing"]
wait_time = 0.45
one_shot = true

[node name="TestingBlock" type="MeshInstance3D" parent="ClawSwing"]
transform = Transform3D(4.84874, 0, -5.68434e-14, 0, 1, 0, -5.68434e-14, 0, 6.02876, 2.30291, 0, 1.72464)
transparency = 1.0
mesh = SubResource("BoxMesh_u12sy")

[node name="Swing" type="AnimationPlayer" parent="ClawSwing"]
libraries = {
"": SubResource("AnimationLibrary_cbt8q")
}

[connection signal="timeout" from="ClawSwing/SwingTimer" to="." method="_on_swing_timer_timeout"]
